tests/baselines/reference/parserS12.11_A3_T4.errors.txt
tests/cases/conformance/parser/ecmascript5/parserS12.11_A3_T4.ts(16,9): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/parserS12.11_A3_T4.ts (1 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /**
     * Syntax constructions of switch statement
     *
     * @path ch12/12.11/S12.11_A3_T4.js
     * @description Using "case" that has no Expresson after it. "CaseClause: case Expression : [StatementList]"
     * @negative
     */
    
    function SwitchTest(value){
      var result = 0;
      
      switch(value) {
        case:
            ~
!!! error TS1109: Expression expected.
          result += 2;
        default:
          result += 32;
          break;
      }
      
      return result;
    }
    
    var x = SwitchTest(0);
    
    